<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AhuraSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_dns" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/AhuraCard">

            <EditText
                android:id="@+id/dns1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_dns1"
                android:inputType="text"
                android:textColor="@color/ahura_text"
                android:textDirection="ltr" />

            <EditText
                android:id="@+id/dns2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_dns2"
                android:inputType="text"
                android:textColor="@color/ahura_text"
                android:textDirection="ltr" />

            <EditText
                android:id="@+id/mtu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mtu"
                android:inputType="number"
                android:textColor="@color/ahura_text"
                android:textDirection="ltr" />

            <CheckBox
                android:id="@+id/autoStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_auto_start" />

            <CheckBox
                android:id="@+id/debugLog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_debug" />
        </LinearLayout>

        <Button
            android:id="@+id/saveSettingsButton"
            style="@style/AhuraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/exportButton"
                    style="@style/AhuraButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/export_settings" />

                <Button
                    android:id="@+id/importButton"
                    style="@style/AhuraButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_settings" />
            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            style="@style/AhuraSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_about" />

        <TextView
            android:id="@+id/versionLabel"
            style="@style/AhuraMuted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="ltr" />

        <TextView
            style="@style/AhuraMuted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text" />
    </LinearLayout>
</ScrollView>
