<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AhuraSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_traffic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/AhuraCard">

            <TextView
                android:id="@+id/statUpload"
                style="@style/AhuraLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/statDownload"
                style="@style/AhuraLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/statFlows"
                style="@style/AhuraLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/statUptime"
                style="@style/AhuraMuted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/healthButton"
            style="@style/AhuraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_check" />

        <TextView
            android:id="@+id/healthResult"
            style="@style/AhuraMuted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/AhuraSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_recent" />

        <TextView
            android:id="@+id/recentLog"
            style="@style/AhuraMuted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace"
            android:textDirection="ltr" />
    </LinearLayout>
</ScrollView>
